--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div style="text-align: center; margin-bottom: 20px;">
+        <label for="darkModeToggle">🌙 Dark Mode</label>
+        <input type="checkbox" id="darkModeToggle">
+    </div>
     <div class="main">
+        
             <div class="calc">
                 <div class="display" id="operationScreen">
                     1+2
